# camptions

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cuda  Dockerfile.wlk  LICENSE  README.md  alembic.ini  camptions.conf  dietpi.txt  docker-compose.yml  emf-camptions-v2-plan.md  frontend-refactor-plan.md  nginx.conf  package-lock.json  package.json  pyproject.toml  todo.md
.github/workflows/: docs.yml
Backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
Backend/src/: index.ts  streams.ts
Portal/: index.html
Portal/js/: camptions.js
alembic/: env.py
alembic/versions/: 001_initial.py
backend/: package-lock.json  package.json
backend/src/: index.ts  ingestion.ts  locations.ts  streams.ts
docs/: index.html
mediamtx/: mediamtx.yml
portal/: .env  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json
portal/src/: App.vue
portal/src/assets/: base.css  main.css
portal/src/components/: ConnectionBar.vue  ThemeToggle.vue
portal/src/router/: index.ts
portal/src/stores/: captions.ts  locations.ts  theme.ts
portal/src/views/: CaptionsScreen.vue  CaptionsView.vue  IndexView.vue  StageScreen.vue
raspberry-pi/: capture_client.py  setup-audio-capture.sh  setup-display.sh  setup-full.sh
scripts/: export_openapi.py
src/camptions/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
src/camptions/routers/: __init__.py  admin.py  audio.py  captions.py  schedule.py  sessions.py  venues.py
src/camptions/services/: __init__.py  audio_streamer.py  distribution.py  rate_limit.py  schedule.py  session.py  transcription.py
static/: admin.html  captions-client.js  display.html  manifest.json  page-utils.js  shared.css  status.html  stream-player.js  viewer.html
tests/: conftest.py  test_api.py
