[project]
name = "camptions-server"
version = "2.0.0"
description = "Live captioning system for EMF Camp using WhisperLiveKit"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "websockets>=16.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
